# serializer version: 1
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-event-hamming]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 0.6667 ┆ 1.0    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.25   ┆ 0.7143 │
  │ 2   ┆ 0.6667 ┆ 0.0    ┆ 1.0    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.75   ┆ 0.5    │
  │ 3   ┆ 1.0    ┆ 1.0    ┆ 0.0    ┆ … ┆ 0.6667 ┆ 0.3333 ┆ 1.0    ┆ 0.8333 │
  │ 4   ┆ 0.5    ┆ 0.5    ┆ 1.0    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.5    ┆ 1.0    │
  │ 5   ┆ 0.5    ┆ 0.25   ┆ 0.75   ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 0.5    │
  │ 6   ┆ 0.6667 ┆ 1.0    ┆ 0.3333 ┆ … ┆ 0.6667 ┆ 0.3333 ┆ 0.6667 ┆ 0.6667 │
  │ 7   ┆ 1.0    ┆ 1.0    ┆ 0.6667 ┆ … ┆ 0.0    ┆ 0.6667 ┆ 1.0    ┆ 1.0    │
  │ 8   ┆ 1.0    ┆ 0.6667 ┆ 0.3333 ┆ … ┆ 0.6667 ┆ 0.0    ┆ 1.0    ┆ 1.0    │
  │ 9   ┆ 0.25   ┆ 0.75   ┆ 1.0    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.0    ┆ 0.75   │
  │ 10  ┆ 0.7143 ┆ 0.5    ┆ 0.8333 ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-interval-hamming]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 0.6667 ┆ 1.0    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.25   ┆ 0.7143 │
  │ 2   ┆ 0.6667 ┆ 0.0    ┆ 1.0    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.75   ┆ 0.5    │
  │ 3   ┆ 1.0    ┆ 1.0    ┆ 0.0    ┆ … ┆ 0.6667 ┆ 0.3333 ┆ 1.0    ┆ 0.8333 │
  │ 4   ┆ 0.5    ┆ 0.5    ┆ 1.0    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.5    ┆ 1.0    │
  │ 5   ┆ 0.5    ┆ 0.25   ┆ 0.75   ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 0.5    │
  │ 6   ┆ 0.6667 ┆ 1.0    ┆ 0.3333 ┆ … ┆ 0.6667 ┆ 0.3333 ┆ 0.6667 ┆ 0.6667 │
  │ 7   ┆ 1.0    ┆ 1.0    ┆ 0.6667 ┆ … ┆ 0.0    ┆ 0.6667 ┆ 1.0    ┆ 1.0    │
  │ 8   ┆ 1.0    ┆ 0.6667 ┆ 0.3333 ┆ … ┆ 0.6667 ┆ 0.0    ┆ 1.0    ┆ 1.0    │
  │ 9   ┆ 0.25   ┆ 0.75   ┆ 1.0    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.0    ┆ 0.75   │
  │ 10  ┆ 0.7143 ┆ 0.5    ┆ 0.8333 ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-state-hamming]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 0.6667 ┆ 1.0    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.25   ┆ 0.7143 │
  │ 2   ┆ 0.6667 ┆ 0.0    ┆ 1.0    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.75   ┆ 0.5    │
  │ 3   ┆ 1.0    ┆ 1.0    ┆ 0.0    ┆ … ┆ 0.6667 ┆ 0.3333 ┆ 1.0    ┆ 0.8333 │
  │ 4   ┆ 0.5    ┆ 0.5    ┆ 1.0    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.5    ┆ 1.0    │
  │ 5   ┆ 0.5    ┆ 0.25   ┆ 0.75   ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 0.5    │
  │ 6   ┆ 0.6667 ┆ 1.0    ┆ 0.3333 ┆ … ┆ 0.6667 ┆ 0.3333 ┆ 0.6667 ┆ 0.6667 │
  │ 7   ┆ 1.0    ┆ 1.0    ┆ 0.6667 ┆ … ┆ 0.0    ┆ 0.6667 ┆ 1.0    ┆ 1.0    │
  │ 8   ┆ 1.0    ┆ 0.6667 ┆ 0.3333 ┆ … ┆ 0.6667 ┆ 0.0    ┆ 1.0    ┆ 1.0    │
  │ 9   ┆ 0.25   ┆ 0.75   ┆ 1.0    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.0    ┆ 0.75   │
  │ 10  ┆ 0.7143 ┆ 0.5    ┆ 0.8333 ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-event-hamming]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 0.8333 ┆ 0.8333 ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.75   ┆ 0.7143 │
  │ 2   ┆ 0.8333 ┆ 0.0    ┆ 0.8333 ┆ … ┆ 0.6667 ┆ 0.6667 ┆ 0.5    ┆ 0.6667 │
  │ 3   ┆ 0.8333 ┆ 0.8333 ┆ 0.0    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 1.0    ┆ 1.0    │
  │ 4   ┆ 0.75   ┆ 0.75   ┆ 0.5    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 1.0    │
  │ 5   ┆ 0.5    ┆ 1.0    ┆ 0.5    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.75   ┆ 0.75   │
  │ 6   ┆ 0.3333 ┆ 1.0    ┆ 0.3333 ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.6667 ┆ 0.6667 │
  │ 7   ┆ 1.0    ┆ 0.6667 ┆ 1.0    ┆ … ┆ 0.0    ┆ 0.3333 ┆ 0.6667 ┆ 1.0    │
  │ 8   ┆ 0.6667 ┆ 0.6667 ┆ 0.6667 ┆ … ┆ 0.3333 ┆ 0.0    ┆ 0.6667 ┆ 1.0    │
  │ 9   ┆ 0.75   ┆ 0.5    ┆ 1.0    ┆ … ┆ 0.6667 ┆ 0.6667 ┆ 0.0    ┆ 0.75   │
  │ 10  ┆ 0.7143 ┆ 0.6667 ┆ 1.0    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-interval-hamming]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 0.8333 ┆ 0.8333 ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.75   ┆ 0.7143 │
  │ 2   ┆ 0.8333 ┆ 0.0    ┆ 0.8333 ┆ … ┆ 0.6667 ┆ 0.6667 ┆ 0.5    ┆ 0.6667 │
  │ 3   ┆ 0.8333 ┆ 0.8333 ┆ 0.0    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 1.0    ┆ 1.0    │
  │ 4   ┆ 0.75   ┆ 0.75   ┆ 0.5    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 1.0    │
  │ 5   ┆ 0.5    ┆ 1.0    ┆ 0.5    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.75   ┆ 0.75   │
  │ 6   ┆ 0.3333 ┆ 1.0    ┆ 0.3333 ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.6667 ┆ 0.6667 │
  │ 7   ┆ 1.0    ┆ 0.6667 ┆ 1.0    ┆ … ┆ 0.0    ┆ 0.3333 ┆ 0.6667 ┆ 1.0    │
  │ 8   ┆ 0.6667 ┆ 0.6667 ┆ 0.6667 ┆ … ┆ 0.3333 ┆ 0.0    ┆ 0.6667 ┆ 1.0    │
  │ 9   ┆ 0.75   ┆ 0.5    ┆ 1.0    ┆ … ┆ 0.6667 ┆ 0.6667 ┆ 0.0    ┆ 0.75   │
  │ 10  ┆ 0.7143 ┆ 0.6667 ┆ 1.0    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-state-hamming]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 0.8333 ┆ 0.8333 ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.75   ┆ 0.7143 │
  │ 2   ┆ 0.8333 ┆ 0.0    ┆ 0.8333 ┆ … ┆ 0.6667 ┆ 0.6667 ┆ 0.5    ┆ 0.6667 │
  │ 3   ┆ 0.8333 ┆ 0.8333 ┆ 0.0    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 1.0    ┆ 1.0    │
  │ 4   ┆ 0.75   ┆ 0.75   ┆ 0.5    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 1.0    │
  │ 5   ┆ 0.5    ┆ 1.0    ┆ 0.5    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.75   ┆ 0.75   │
  │ 6   ┆ 0.3333 ┆ 1.0    ┆ 0.3333 ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.6667 ┆ 0.6667 │
  │ 7   ┆ 1.0    ┆ 0.6667 ┆ 1.0    ┆ … ┆ 0.0    ┆ 0.3333 ┆ 0.6667 ┆ 1.0    │
  │ 8   ┆ 0.6667 ┆ 0.6667 ┆ 0.6667 ┆ … ┆ 0.3333 ┆ 0.0    ┆ 0.6667 ┆ 1.0    │
  │ 9   ┆ 0.75   ┆ 0.5    ┆ 1.0    ┆ … ┆ 0.6667 ┆ 0.6667 ┆ 0.0    ┆ 0.75   │
  │ 10  ┆ 0.7143 ┆ 0.6667 ┆ 1.0    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[event-hamming]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬───────┬───────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1 ┆ seq_2 │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---   ┆ ---   │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32   ┆ f32   │
  ╞═════════╪═════════╪═════════╪═════════╪═══════╪═══════╡
  │ empty_1 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ empty_2 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ empty_3 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ seq_1   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 0.0   ┆ 0.5   │
  │ seq_2   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 0.5   ┆ 0.0   │
  └─────────┴─────────┴─────────┴─────────┴───────┴───────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[interval-hamming]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬───────┬───────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1 ┆ seq_2 │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---   ┆ ---   │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32   ┆ f32   │
  ╞═════════╪═════════╪═════════╪═════════╪═══════╪═══════╡
  │ empty_1 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ empty_2 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ empty_3 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ seq_1   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 0.0   ┆ 0.5   │
  │ seq_2   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 0.5   ┆ 0.0   │
  └─────────┴─────────┴─────────┴─────────┴───────┴───────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[state-hamming]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬───────┬───────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1 ┆ seq_2 │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---   ┆ ---   │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32   ┆ f32   │
  ╞═════════╪═════════╪═════════╪═════════╪═══════╪═══════╡
  │ empty_1 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ empty_2 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ empty_3 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ seq_1   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 0.0   ┆ 0.5   │
  │ seq_2   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 0.5   ┆ 0.0   │
  └─────────┴─────────┴─────────┴─────────┴───────┴───────┘
# ---
# name: TestConfigRoundtrip.test_to_config_snapshot
  dict({
    'settings': dict({
      'agg_fun': 'sum',
      'entity_metric': dict({
        'settings': dict({
          'cost': None,
          'entity_feature': None,
          'mismatch_cost': 1.0,
        }),
        'type': 'hamming',
      }),
      'padding_penalty': 0.5,
    }),
    'type': 'linearpairwise',
  })
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-event-hamming]
  0.6667
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-interval-hamming]
  0.6667
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-state-hamming]
  0.6667
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-event-hamming]
  0.8333
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-interval-hamming]
  0.8333
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-state-hamming]
  0.8333
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-event-hamming]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-interval-hamming]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-state-hamming]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-event-hamming]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-interval-hamming]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-state-hamming]
  0.0
# ---
